# 114-1FlaskFinal

./: Flask-Login.md  README.md  main.py  models.py  pyproject.toml  requirements.txt  werkzeug.security.md
sql/: 1. user.sql  2. todo_list.sql  3. task.sql  4. activity_log.sql  5. shared_lists.sql
static/: style.css
templates/: auth.html  base.html  create_list.html  dashboard.html  err_404.html  err_500.html  footer.html  list_detail.html  logs.html
